--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@safe-global/api-kit": "^1.3.1",
+    "@safe-global/protocol-kit": "^1.3.0",
+    "@safe-global/safe-core-sdk-types": "^2.3.0",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@web3modal/ethereum": "^2.7.1",
+    "@web3modal/react": "^2.7.1",
     "autoprefixer": "10.4.15",
     "dotenv": "^16.3.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "ethers": "^5.7.2",
     "next": "13.4.19",
     "node-fetch": "^3.3.2",
     "postcss": "8.4.29",
@@ -24,7 +30,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "ts-node": "^10.9.1",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "wagmi": "^1.4.2"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
@@ -34,6 +41,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.5",
     "jest": "^29.7.0",
+    "prettier": "3.0.3",
     "ts-jest": "^29.1.1"
   }
 }
