--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "ethers": "^5.7.2",
+    "lokijs": "^1.5.12",
     "next": "13.4.19",
     "node-fetch": "^3.3.2",
+    "pino-pretty": "^10.2.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
