--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@web3modal/react": "^2.7.1",
     "autoprefixer": "10.4.15",
     "dotenv": "^16.3.1",
+    "encoding": "^0.1.13",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "ethers": "^5.7.2",
